@@ -11,4 +11,11 @@
   expression=""
   position-after="eea.geotags.js"
   />
+
+ <javascript id="geotagsClusterLayer.js"
+  cacheable="True" compression="none" cookable="True" enabled="True" inline="False"
+  expression=""
+  position-after="eea.geotags.map.js"
+  />
+
 </object>
