@@ -35,4 +35,14 @@
       />
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+    source="*"
+    destination="5.3"
+    profile="eea.geotags:default">
+
+    <genericsetup:upgradeDepends
+      title="Import profile steps with changes: jsregistry"
+      import_steps="jsregistry"
+      />
+  </genericsetup:upgradeSteps>
 </configure>
